Fix T52212: Vgroups doesn't work after Carve Boolean